--- a/css/eneon.css
+++ b/css/eneon.css
@@ -3,6 +3,7 @@ body {
 /*     width: 300px; */
 }
 
-#suggested-networks li {
-    list-style: none:
+#eneon-suggested-networks ul {
+    list-style: none;
+    padding: 0;
 }
