--- a/css/eneon.css
+++ b/css/eneon.css
@@ -7,7 +7,11 @@ body {
     margin-bottom: 1em;
 }
 
-.network-suggestion-hint {
-    
+#eneon-issue-wizard .suggested-networks-hint {
+    margin-bottom: 1em;
 }
 
+#eneon-issue-wizard .suggested-networks {
+    overflow-y: scroll;
+    max-height: 400px;
+}
