--- a/css/eneon.css
+++ b/css/eneon.css
@@ -15,3 +15,11 @@ body {
     overflow-y: scroll;
     max-height: 400px;
 }
+
+.field-name-eneon-network-description {
+    margin-bottom: 1em;
+}
+
+.field-name-eneon-issue-description {
+    margin-bottom: 1em;
+}
