fix network list in wizard
previously selected networks which do not match the updated
query parameters anymore are now shown in a separate list.

--- a/css/eneon.css
+++ b/css/eneon.css
@@ -15,9 +15,9 @@ body {
     margin-bottom: 1em;
 }
 
-#eneon-issue-wizard .suggested-networks {
+#eneon-issue-wizard .network-list {
     overflow-y: scroll;
-    max-height: 400px;
+    max-height: 300px;
 }
 
 #eneon-issue-wizard .taxonomy-items,
